--- a/web/app/themes/greenspace/package.json
+++ b/web/app/themes/greenspace/package.json
@@ -23,11 +23,13 @@
 		"npm-run-all": "^4.1.5",
 		"rtlcss": "^2.6.1",
 		"sass": "^1.32.5",
+		"slick-carousel": "^1.8.1",
 		"webpack": "^5.4.0",
 		"webpack-cli": "^4.2.0"
 	},
 	"scripts": {
-		"build:style": "sass scss/style.scss:style.css --style=expanded --source-map",
+		"webpack": "webpack",
+		"build:style": "sass src/scss/style.scss:style.css --style=expanded --source-map",
 		"build": "run-s \"build:*\"",
 		"watch": "chokidar \"**/*.scss\" -c \"npm run build\" --initial"
 	}
